--- a/BestarProject/ShoppingMall/res/values/strings.xml
+++ b/BestarProject/ShoppingMall/res/values/strings.xml
@@ -13,8 +13,8 @@
     <string name="sell_nodata">暂无记录</string>
 
     <string name="register_cancel">取消</string>
-    <string name="register_one">注册</string>
-    <string name="register_phone_number">手机号 </string>
+    <string name="register_one">用户注册</string>
+    <string name="register_phone_number">请输入手机号码 </string>
     <string name="phone_number_size">11位手机号</string>
     <string name="register_captcha">验证码 </string>
     <string name="register_captcha_size">6位验证码</string>
@@ -22,6 +22,6 @@
     <string name="password_size" tools:ignore="TypographyDashes">密码（6-20位，须含数字和字母）</string>
     <string name="register_confirm_password">确认密码 </string>
     <string name="confirm_password_s">请再次输入密码</string>
-    <string name="register_next">下一步</string>
+    <string name="register_next">免费注册</string>
     <string name="register_get_captcha">获取验证码</string>
 </resources>
