--- a/BestarProject/ShoppingMall/res/values/strings.xml
+++ b/BestarProject/ShoppingMall/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <string name="app_name">房源宝</string>
+    <string name="app_name">亚太共育商城</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="error1">网络不给力请稍后再试吧</string>
