--- a/BestarProject/ShoppingMall/src/main/res/values/strings.xml
+++ b/BestarProject/ShoppingMall/src/main/res/values/strings.xml
@@ -24,4 +24,11 @@
     <string name="confirm_password_s">请再次输入密码</string>
     <string name="register_next">免费注册</string>
     <string name="register_get_captcha">获取验证码</string>
+    <string name="xlistview_header_hint_normal">下拉刷新</string>
+    <string name="xlistview_header_hint_ready">松开刷新数据</string>
+    <string name="xlistview_header_hint_loading">正在加载...</string>
+    <string name="xlistview_header_last_time">上次更新时间：</string>
+    <string name="xlistview_footer_hint_normal">查看更多</string>
+    <string name="xlistview_footer_hint_ready">松开载入更多</string>
+    <string name="xlistview_footer_hint_nodata">没有更多数据了</string>
 </resources>
